Fixed Project Image Height on Mobile

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ nav {
 .project-div {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
-	height: 22rem;
+	height: 18rem;
 }
 
 .overlay {
